<resources>
    <string name="app_name">Wedding</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="description" translatable="false"></string>

    <!-- Nav bar-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login" translatable="false" />
    <string name="menu_guest_name" translatable="false">Welcome to our wedding app!</string>
    <string name="menu_invite">Invitation</string>
    <string name="menu_ceremony">Ceremony</string>
    <string name="menu_engagement">Reception</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_gift">Gift</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_breakfast">Breakfast</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_tables">Your Table</string>

    <!-- Strings related to get config -->
    <string name="internet_title_dialog_alert">No internet connection was found!</string>
    <string name="internet_message_dialog_alert">Hi guys! Thank you very much for being part of our special day. We are sorry, but without access to the internet some app features will not be available.</string>
    <string name="okay" translatable="false">Okay</string>
    <string name="config_file_title_dialog_alert" translatable="false">Ups!</string>
    <string name="config_file_message_dialog_alert">We are sorry, but it appears there is an issue on our server. We will try to resolve it as fast as possible.</string>

    <!-- Strings related to login -->
    <string name="button_text_login" translatable="false">Login</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_logout" translatable="false">Logout</string>
    <string name="text_username" translatable="false">Username</string>
    <string name="text_password" translatable="false">Password</string>
    <string name="error_wrong_user_details_title">Incorrect Credentials</string>
    <string name="error_wrong_user_details_msg">Your username or password may be wrong. Please, try again or contact us to resquest the details.</string>
    <string name="error_login_title">Login failed</string>
    <string name="error_login_msg">We are sorry, but it appears our app logging page is not working. Please, send us a message and we will resolve it as fast as possible.</string>

    <!-- Strings related to Ceremony -->
    <string name="error_ceremony_map_title">Login failed</string>
    <string name="error_ceremony_map_msg">We are sorry, but it appears our app ceremony page is not working. Please, send us a message and we will resolve it as fast as possible.</string>

    <!-- Strings related to menu -->
    <string name="download_menu_not_found_title">Sorry</string>
    <string name="download_menu_not_found_text">We could not find the menu. Please, contact us!</string>

    <!-- Strings related to invite -->
    <string name="download_invite_not_found_title">Sorry</string>
    <string name="download_invite_not_found_text">We could not find the invitation. Please, contact us!</string>

    <!-- Strings related to invite -->
    <string name="download_schedule_not_found_text">We could not find the schedule. Please, contact us!</string>

    <!-- Strings related to tables -->
    <string name="download_tables_not_found_text">We could not find the tables. Please, contact us!</string>

</resources>