<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_invite"
            android:title="@string/menu_invite" />
        <item
            android:id="@+id/nav_breakfast"
            android:title="@string/menu_breakfast" />
        <item
            android:id="@+id/nav_ceremony"
            android:title="@string/menu_ceremony" />
        <item
            android:id="@+id/nav_engagement"
            android:title="@string/menu_engagement" />
        <item
            android:id="@+id/nav_food_menu"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/nav_gift"
            android:title="@string/menu_gift" />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/menu_about_us" />
    </group>
</menu>