<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/menu_login"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.e.wedding.app.view.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_ceremony"
            app:destination="@id/nav_ceremony" />
        <action
            android:id="@+id/action_nav_home_to_nav_invite"
            app:destination="@id/nav_invite" />
        <action
            android:id="@+id/action_nav_home_to_nav_breakfast"
            app:destination="@id/nav_breakfast" />
        <action
            android:id="@+id/action_nav_home_to_nav_food_menu"
            app:destination="@id/nav_food_menu" />
        <action
            android:id="@+id/action_nav_home_to_nav_engagement"
            app:destination="@id/nav_engagement" />
        <action
            android:id="@+id/action_nav_home_to_nav_about_us"
            app:destination="@id/nav_about_us" />
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_nav_gift"
            app:destination="@id/nav_gift" />
    </fragment>

    <fragment
        android:id="@+id/nav_invite"
        android:name="com.e.wedding.app.view.invite.InviteFragment"
        android:label="@string/menu_invite"
        tools:layout="@layout/fragment_invite" />

    <fragment
        android:id="@+id/nav_breakfast"
        android:name="com.e.wedding.app.view.breakfast.BreakfastFragment"
        android:label="@string/menu_breakfast"
        tools:layout="@layout/fragment_breakfast" />

    <fragment
        android:id="@+id/nav_ceremony"
        android:name="com.e.wedding.app.view.ceremony.CeremonyFragment"
        android:label="@string/menu_ceremony"
        tools:layout="@layout/fragment_ceremony" />

    <fragment
        android:id="@+id/nav_engagement"
        android:name="com.e.wedding.app.view.engagement.EngagementFragment"
        android:label="@string/menu_engagement"
        tools:layout="@layout/fragment_engagement" />

    <fragment
        android:id="@+id/nav_food_menu"
        android:name="com.e.wedding.app.view.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_gift"
        android:name="com.e.wedding.app.view.gift.GiftFragment"
        android:label="@string/menu_gift"
        tools:layout="@layout/fragment_gift" />


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.e.wedding.app.view.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gift">
        <action
            android:id="@+id/action_nav_gallery_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.e.wedding.app.view.about.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.e.wedding.app.view.slideshow.SlideShowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow">
        <action
            android:id="@+id/action_nav_slideshow_to_nav_gallery"
            app:destination="@id/nav_gallery"
            app:popUpTo="@id/nav_gallery" />
    </fragment>

</navigation>